force-app/main/default/objects/cyclecount__c/cyclecount__c.object-meta.xml
<CustomObject>
    <label>cyclecount</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cyclecounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>