force-app/main/default/objects/cyclecount__c/fields/cycle_count_ID__c.field-meta.xml
<CustomField>
    <fullName>cycle_count_ID__c</fullName>
    <formula>Name &amp;&quot;&quot;&amp; Location__r.loc__c &amp;&quot;&quot;&amp;  text(CreatedDate)</formula>
    <label>cycle count ID</label>
    <type>Text</type>
</CustomField>