force-app/main/default/objects/cyclecount__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>cycle_counts</relationshipName>
    <type>Lookup</type>
</CustomField>