force-app/main/default/objects/cyclecount__c/fields/Pickl__c.field-meta.xml
<CustomField>
    <fullName>Pickl__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>